# CrystaLyse.AI

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODEX_SKILLS_NOTES.md  COORDINATE_ARRAY_FIX.md  CRYSTALYSE_FIXES_SUMMARY.md  CRYSTALYSE_MVP_STATUS.md  CRYSTALYSE_TEST_SEQUENCE.md  CRYSTALYSE_V2_VISION.md  CrystaLyse_AI_Technical_Architecture_Report.md  CrystaLyse_AI_User_Guide.md  CrystaLyse_Workflow_Showcase.ipynb  ENHANCED_UI_USAGE.md  FEATURE_MATRIX.md  FINAL_STATUS_GPT4O.md  Lead_Free_Ferroelectric_Materials_Design.ipynb  MANIFEST.in  Makefile  PROGRESS_REPORT.md  README.md  READMEFORLLMS.md  SESSION_BASED_SOLUTION.md  SESSION_BASED_USER_GUIDE.md  SKILLS_INTEGRATION_PLAN.md  SKILL_FORMAT_ANALYSIS.md  STATUS & ROADMAP.md  STATUS.md  Self_Healing_Concrete_Mode_Comparison.md  TECHNICAL_ANALYSIS_REPORT.md  Tool_Usage_Analysis_Self_Healing_Concrete.md  UI_ENHANCEMENT_SUCCESS_SUMMARY.md  UV_MIGRATION_PLAN.md  VERSION_INFO.md  VISION.md  a2as.yaml  configure_mdg_api.py  debug_chemeleon_mcp.py  debug_chemeleon_startup.py  debug_chemeleon_tools.py  (+25 more)
archive/mcp-legacy/chemistry-unified-server/: pyproject.toml
chemeleon-mcp-server/: example_usage.py  pyproject.toml
chemeleon-mcp-server/src/chemeleon_mcp/: __init__.py  server.py  tools.py
chemistry-unified-server/: pyproject.toml
chemistry-unified-server/src/chemistry_unified/: server.py
chemistry-unified-server/src/ckpts/: chemeleon_dng_mp_20_v0.0.2.ckpt
dev/: README.md  install.sh  pyproject.toml  setup_headless_viz.sh
dev/chemistry-creative-server/: pyproject.toml
dev/chemistry-creative-server/src/chemistry_creative/: __init__.py  server.py
dev/chemistry-unified-server/src/chemistry_unified/: __init__.py  patched_server.py  server.py
dev/ckpts/: chemeleon_csp_mp_20_v0.0.2.ckpt
dev/crystalyse/: __init__.py  __main__.py  cli.py  config.py  converters.py  pyproject.toml  unified_cli.py
dev/crystalyse/agents/: __init__.py  agent.py  crystalyse_agent.py  mode_injector.py  openai_agents_bridge.py  session_based_agent.py  tool_classification.py  tool_executor.py
dev/crystalyse/infrastructure/: __init__.py  mcp_connection_pool.py  session_manager.py
dev/crystalyse/memory/: __init__.py  compaction.py  cross_session_context.py  crystalyse_memory.py  discovery_cache.py  memory_tools.py  project_memory.py  session.py  session_memory.py  user_memory.py
dev/crystalyse/orchestration/: __init__.py  cancellation.py  errors.py  executor.py  futures.py  locking.py  metrics.py
dev/crystalyse/output/: creative_formatter.py  dual_formatter.py  universal_cif_visualizer.py
dev/crystalyse/prompts/: agent_prompts.py  clarification_llm_prompt.md  lead_agent_prompt.md  unified_agent_prompt.md  unified_agent_prompt.md.backup
dev/crystalyse/provenance/: README.md  __init__.py  artifact_tracker.py  render_gate.py
dev/crystalyse/provenance/core/: __init__.py  event_logger.py  materials_tracker.py  mcp_detector.py  (+1 more)
dev/crystalyse/sandbox/: __init__.py  detection.py  landlock.py  policy.py  seatbelt.py
dev/crystalyse/skills/: __init__.py  executor.py  injector.py  loader.py  registry.py
dev/crystalyse/tests/: test_cli.py  test_visualization.py
dev/crystalyse/tools/: __init__.py  artifacts.py  code_runner.py  discovery_tools.py  downloader.py  errors.py  models.py  optimade.py  shell.py  web_search.py
dev/crystalyse/tui/: __init__.py  app.py
dev/crystalyse/ui/: __init__.py  ascii_art.py  chat_ui.py  clarification.py  components.py  dynamic_mode_adapter.py  enhanced_clarification.py  enhanced_cli.py  enhanced_result_formatter.py  progress.py  provenance_bridge.py  slash_commands.py  trace_handler.py
dev/crystalyse/user_config/: __init__.py  preferences.py
dev/crystalyse/utils/: chemistry.py  structure.py
dev/crystalyse/validation/: __init__.py
dev/crystalyse/workspace/: materials_workspace.py  workspace_tools.py
dev/docs/: README.md  index.md  quickstart.md  requirements.txt
dev/docs/api/: cli-reference.md
dev/docs/architecture/: overview.md
dev/docs/concepts/: agent_modes.md  agents.md  analysis_modes.md  autonomous_mode_switching.md  clarification_system.md  cli_architecture.md  memory.md  provenance_system.md  sessions.md  tools.md  ui.md
dev/docs/features/: memory-system.md  session-management.md
dev/docs/guides/: cli_usage.md  installation.md  quick-start.md
dev/docs/implementation/: ENHANCED_UI_INTEGRATION_SUMMARY.md  FIXES_APPLIED.md  ISSUES_FIXED_SUMMARY.md  TEST_RESULTS_SUMMARY.md  UI_ENHANCEMENT_IMPLEMENTATION_PLAN.md  UNIFIED_INTERFACE_IMPLEMENTATION_SUMMARY.md
dev/docs/reference/: index.md
dev/docs/tools/: chemeleon.md  mace.md  smact.md  visualisation.md
dev/examples/: universal_cif_demo.py
dev/oldmcpservers/chemeleon-mcp-server/: README.md  example_usage.py  package-lock.json
dev/oldmcpservers/mace-mcp-server/: pyproject.toml
dev/oldmcpservers/smact-mcp-server/: claude_desktop_config_example.json  pyproject.toml
dev/pymatgen-mcp-server/: pyproject.toml
dev/servers/chemistry-creative/: pyproject.toml
dev/servers/chemistry-unified/: pyproject.toml
dev/servers/visualization/: pyproject.toml
dev/skills/: SKILL_INDEX.md
dev/skills/chemeleon-prediction/: SKILL.md
dev/skills/mace-calculation/: SKILL.md
dev/skills/optimade-search/: SKILL.md
dev/skills/provenance/: SKILL.md
dev/skills/pymatgen-analysis/: SKILL.md
dev/skills/python-analysis/: SKILL.md
dev/skills/smact-validation/: SKILL.md
dev/skills/web-search/: SKILL.md
dev/tests/: conftest.py
dev/tests/contract/: test_ci_config.py
dev/tests/mcp_servers/: conftest.py
dev/visualization-mcp-server/: pyproject.toml
pypi/: README.md  mkdocs.yml  pyproject.toml
pypi-v2/: CHANGELOG.md  FINAL_RELEASE_SUMMARY.md  MANIFEST.in  README.md  pyproject.toml
pypi-v2/mcp-servers/chemistry-creative-server/: pyproject.toml
pypi-v2/mcp-servers/chemistry-unified-server/: pyproject.toml
pypi-v2/mcp-servers/visualization-mcp-server/: pyproject.toml
pypi-v2/src/crystalyse/: __init__.py  __main__.py  cli.py  config.py  converters.py
pypi/src/crystalyse_ai/: __init__.py  config.py  unified_cli.py
(+512 files in other folders)
