[project]
name = "crystalyse"
version = "0.2.0"
description = "CrystaLyse.AI - Revolutionary dual-mode materials discovery with crystal structure prediction and interactive visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "openai-agents>=0.0.16",
    "mcp>=0.1.0",
    "pymatgen>=2024.1.0",
    "ase>=3.22.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "typing-extensions>=4.5.0",
    "pydantic>=2.0.0",
    "asyncio>=3.4.3",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

visualization = [
    "plotly>=5.18.0",
    "py3Dmol>=2.0.4",
    "kaleido>=0.2.1",
]

all = [
    "crystalyse[visualization]",
]

[project.scripts]
crystalyse = "crystalyse.cli_launcher:main"
crystalyse-old = "crystalyse.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["crystalyse*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true