[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemeleon-mcp"
version = "0.1.0"
description = "MCP server for Chemeleon crystal structure prediction"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CrystaLyse.AI Team", email = "team@crystalyse.ai" }
]
keywords = ["mcp", "materials", "crystal", "structure", "prediction", "chemeleon", "csp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "mcp>=1.0.0",
    "torch>=2.0.0",
    "numpy<2.0",
    "ase>=3.22.0",
    "pymatgen>=2024.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.64.0",
    "pandas>=1.5.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.0.0",
    "wandb>=0.13.0",
    "jsonargparse[signatures]>=4.17.0",
    "einops>=0.6.0",
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.16",
    "torch-cluster>=1.6.0",
    "torch-geometric>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
chemeleon-mcp = "chemeleon_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chemeleon_mcp"]