[project]
name = "chemistry-unified-server"
version = "0.1.0"
description = "Unified Chemistry MCP Server integrating SMACT, Chemeleon, and MACE"
dependencies = [
    "python-mcp>=1.0.0",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pymatgen",
    "ase",
    "torch",
    "numpy",
    "smact",
    "mace-torch",
]

[project.scripts]
chemistry-unified-server = "chemistry_unified.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] 