[project]
name = "crystalyse"
version = "1.0.0-dev"
description = "Crystalyse v1.0.0-dev - Intelligent Scientific AI Agent for Inorganic Materials Design"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "openai-agents>=0.6.0",

    "pymatgen>=2024.1.0",
    "ase>=3.22.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "typing-extensions>=4.5.0",
    "pydantic>=2.0.0",
    "asyncio>=3.4.3",
    "rich>=13.0.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
    "typer>=0.12.0",

    # Pinned to v0.1.2 which includes fix for missing subpackages in PyPI distribution
    # Can use GitHub source for now until PyPI package is published
    "chemeleon-dng @ git+https://github.com/hspark1212/chemeleon-dng.git@v0.1.2",

    "torch>=2.1.0",
    "smact>=2.7.0",
    "mace-torch>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "anyio>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pyright>=1.1.390",
    "pre-commit>=3.6.0",
    "codespell>=2.4.0",
]

visualization = [
    "plotly>=5.18.0",
    "py3Dmol>=2.0.4",
    "kaleido>=0.2.1",
    "pymatviz>=0.8.5,<0.17.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-minify-plugin>=0.7.0",
]

all = [
    "crystalyse[visualization]",
]

[project.scripts]
crystalyse = "crystalyse.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["crystalyse*"]

[tool.ruff]
line-length = 100
target-version = "py311"  # Project requires Python 3.11+

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (intentional for warning suppression)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in callbacks/handlers)
    "ARG002", # unused method argument (common in overrides)
]

[tool.ruff.lint.isort]
known-first-party = ["crystalyse"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show extra summary info for all test outcomes
    "-q",                     # Quiet mode
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on config issues
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that require GPU (deselect with '-m \"not requires_gpu\"')",
    "requires_api: marks tests that require real API keys (deselect with '-m \"not requires_api\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:pymatgen.*",
]

# Coverage configuration
[tool.coverage.run]
source = ["crystalyse"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/examples/*",
    "*/__main__.py",
]
parallel = true

[tool.coverage.report]
fail_under = 10  # Start low, increase as test coverage improves (currently ~15%)
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",  # Ellipsis for protocol stubs
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Codespell configuration
[tool.codespell]
skip = [
    ".git",
    "*.lock",
    "*.json",
    "*.pkl",
    "*.pkl.gz",
    "*.cif",
    "htmlcov",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "*.egg-info",
    "node_modules",
    "dist",
    "build",
]
ignore-words-list = [
    "mace",     # ML model name
    "eneg",     # electronegativity abbreviation
    "coo",      # coordinate
    "smact",    # library name
    "nd",       # numpy ndarray
    "te",       # tellurium element
    "ba",       # barium element
    "ser",      # serial
    "ot",       # other
]
check-filenames = true

# Pyright configuration
[tool.pyright]
include = ["crystalyse", "tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".git",
    "build",
    "dist",
]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportOptionalMemberAccess = "warning"
reportGeneralTypeIssues = "warning"