[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemistry-creative-server"
version = "0.1.0"
description = "Creative Chemistry MCP Server with Chemeleon and MACE (fast exploration mode)"
authors = [
    {name = "CrystaLyse.AI Development Team"}
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.5.0",
    "ase>=3.22.0",
    "numpy>=1.21.0",
]

[project.scripts]
chemistry-creative-server = "chemistry_creative.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chemistry_creative*"]