[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mace-mcp-server"
version = "0.1.0"
description = "MACE MCP server for CrystaLyse.AI - Production-ready energy calculations and materials discovery"
authors = [
    {name = "CrystaLyse.AI Team"}
]
dependencies = [
    
    "torch>=1.12.0",
    "ase>=3.22.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
gpu = [
    "GPUtil>=1.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mace-mcp = "mace_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mace_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S603", "S607", "PLR0913", "PLR0912", "PLR0915", "TRY003", "UP007"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true