[project]
name = "chemistry-unified-server"
version = "1.0.0"
description = "Unified Chemistry MCP Server for Crystalyse (integrates SMACT, Chemeleon, MACE, PyMatGen)"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ryan Nduma", email = "ryannduma@gmail.com"}
]

dependencies = [
    "crystalyse",
    "mcp>=1.0.0",
    "fastmcp>=0.5.0",
    "pymatgen>=2024.1.0",
    "ase>=3.22.0",
    "smact>=3.2.0",
    "mace-torch>=0.3.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[tool.uv.sources]
crystalyse = { workspace = true }

[project.scripts]
chemistry-unified-server = "chemistry_unified.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chemistry_unified"]
